通过 Redis 将 WebSocket 将 WebSocket 心跳机制移至服务器
从 WebsocketManager（TS）中移除客户端心跳逻辑，并将心跳处理集中到服务器端。主要变更：

- UI：WebsocketManager：移除心跳定时器、未收到心跳的计数器、相关配置选项及处理程序；不再在连接打开/关闭时启动/停止心跳——客户端不再管理心跳。
- 服务端：添加 RedisConstant.PING_STATUS，用于在 Redis 中跟踪 ping 中跟踪 ping 状态。
- SendPingAsync：通过 @RequiredArgsConstructor 注入 RedisTemplate，在发送 ping 前使用 setIfAbsent 设置一个带 TTL（40秒）的 PING_STATUS_STATUS 键；若键已存在，则认为会话已失效并将其删除；异常情况下删除该键。
- PongHandler：当接收到 PONG 时，删除 PING_STATUS 键，以标记客户端响应正常。
- WebSocketHeartbeatTimer：将计划任务方法名 改为 heartBeat（保持相同的 30 秒 cron cron 表达式），并调用 SendPingAsync 由服务端驱动心跳。
- 其他：SysActuatorController 在初始样本中使用 data.getFirst() 而非 data.get(0)。

这些更改将心跳检测的责任集中到服务器端，利用 Redis Redis 可靠地检测无响应的客户端，并简化了客户端的 WebSocket 代码。